--- a/Views/GoogleMap/Index.cshtml
+++ b/Views/GoogleMap/Index.cshtml
@@ -93,7 +93,8 @@
             } else {
                 alert('Please click on the map to select a location first.');
             }
-        } function searchLocationDetails() {
+        } 
+        function searchLocationDetails() {
             const searchInput = document.getElementById('searchInput').value;
             if (searchInput == null || searchInput == '') {
                 alert("enter value!!");
