--- a/Views/Home/Map.cshtml
+++ b/Views/Home/Map.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Map";
+    ViewData["Title"] = "Map Area Save";
 }
 <style>
     .geocoder-dropdown-item {
@@ -17,9 +17,50 @@
         font-size: larger;
     }
 
+    #controls {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        width: 100%;
+        background-color: #f8f9fa;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        z-index: 1;
+    }
+
+    button {
+        margin: 0 10px;
+        padding: 10px 20px;
+        border: none;
+        background-color: #007bff;
+        color: white;
+        cursor: pointer;
+    }
+
+        button:disabled {
+            background-color: #6c757d;
+        }
+
+    .form-group {
+        margin: 0 10px;
+        width: 200px;
+    }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 </style>
+
 <h2>@ViewData["Title"]</h2>
-<div class="raw">
+<div class="raw" style="display:none">
     <div class="col-md-4" style="ml-2">
         <form id="searchForm">
            
@@ -35,7 +76,23 @@
     </div>
 </div>
 
+<div id="controls">
 
+    <div id="form" style="display:none;">
+        <div class="form-group">
+            <label for="formattedAddress">Formatted Address</label>
+            <input type="text" id="formattedAddress" readonly>
+        </div>
+        <div class="form-group">
+            <label for="userInput">User Input</label>
+            <input type="text" id="userInput">
+        </div>
+
+    </div>
+    <button id="confirmBtn">Confirm</button>
+    <button id="saveBtn" style="display:none;">Save</button>
+    <button id="resetBtn" style="display:none;">Reset</button>
+</div>
 
 <div id="map" style="width: 100%; height: 500px;"></div>
 
@@ -48,8 +105,21 @@
         //     container: 'map',
         //     style: 'mapbox://styles/mapbox/streets-v11'
         // });
-
-    const map = new mapboxgl.Map({
+    var autocomplete;
+    var clickedPoint;
+    let map;
+    let markers = [];
+    let marker;
+    let clickedPoints = [];
+    let sortedPoints = [];
+    let polygonPoints = [];
+    let polygon;
+    let centerMarker;
+    let centerPoint;
+    let geocoder;
+    let mapboxAddress;
+                let mapCLickEvent = true;
+     map = new mapboxgl.Map({
         container: 'map',
 
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
@@ -66,7 +136,7 @@
             // Update map center
             map.setCenter([longitude, latitude]);
 
-            new mapboxgl.Marker()
+                marker = new mapboxgl.Marker()
                 .setLngLat([longitude, latitude])
                 .addTo(map);
             let coordinates = {
@@ -79,7 +149,7 @@
         alert('Geolocation is not supported by your browser.');
     }
  
-    const geocoder = new MapboxGeocoder({
+     geocoder = new MapboxGeocoder({
         accessToken: mapboxgl.accessToken,
         types: 'poi',
         // see https://docs.mapbox.com/api/search/#geocoding-response-object for information about the schema of each response feature
@@ -101,6 +171,13 @@
     // Add a click event listener
     map.on('click', function (e) {
 
+        var clickedLocation = e.lngLat;
+
+        console.log("e:", e)
+        console.log("clikedlocation:", clickedLocation)
+        if (mapCLickEvent == true) {
+            GetPolygon(clickedLocation);
+        }
        
         //Get the coordinates where the user clicked
       //  var coordinates = e.lngLat;
@@ -109,8 +186,8 @@
         //take location details and save to db
        
         // Make an AJAX request with the clicked location's coordinates
-        var coordinates = e.lngLat;
-       getAreaData(coordinates.lng, coordinates.lat);
+       //  var coordinates = e.lngLat;
+       // getAreaData(coordinates.lng, coordinates.lat);
         //getAreaDatademo(coordinates.lng, coordinates.lat);
 
         // getLocationDetails(coordinates);
@@ -120,8 +197,175 @@
         // new mapboxgl.Marker()
         //     .setLngLat([coordinates.lng, coordinates.lat])
         //     .addTo(map);
-    });
 
+
+    });
+    function GetPolygon(clickedLocation) {
+        var lat = clickedLocation.lat;
+        var lon = clickedLocation.lng;
+        clickedPoint = clickedLocation;
+        console.log('You clicked the map at: ' + lat + ', ' + lon);
+
+        // Constructing Overpass API URL to fetch nearby `way` elements
+        // var overpassUrl = `https://overpass-api.de/api/interpreter?data=[out:json];(way(around:10,${lat},${lon})[building];);out;`;
+        var overpassUrl = `https://overpass-api.de/api/interpreter?data=[out:json];(way(around:30,${lat},${lon})[building];);out;`;
+        // var overpassUrl = `https://overpass-api.de/api/interpreter?data=[out:json];(node(around:1,${lat},${lon});way(around:1,${lat},${lon});relation(around:1,${lat},${lon}););out;`;
+
+
+
+        $.ajax({
+            url: overpassUrl,
+            type: 'GET',
+            dataType: 'json',
+            timeout: 30000,
+            success: function (response) {
+                console.log('API Response:', response);
+
+
+
+                // Clear previous polygons if any
+                // Clear previous layers if any
+              
+                if (map.getLayer('polygon')) {
+                    map.removeLayer('polygon');
+                    map.removeSource('polygon');
+                }
+                if (marker) {
+                    marker.remove();
+                }
+                let endProcess = 0;
+                let elementcount = 0;
+                if (response.elements.length === 0) {
+                    alert('No elements found near this location.');
+                    return;
+                }
+                // Process `way` elements
+                response.elements.forEach(function (element) {
+                    if (element.type === 'way' && element.nodes.length > 0) {
+
+                        var nodes = element.nodes;
+                        var nodeDetailsRequests = nodes.map(function (nodeId) {
+                            return $.ajax({
+                                url: `https://api.openstreetmap.org/api/0.6/node/${nodeId}.json`,
+                                type: 'GET',
+                                dataType: 'json',
+                                async: false,
+                            });
+                        });
+
+                        // Execute all node detail requests
+                        // Execute all node detail requests
+                        $.when.apply($, nodeDetailsRequests).done(function () {
+                            var nodeDetailsResponses = Array.prototype.slice.call(arguments);
+                     let latLngs = [];
+
+                            // Process each node detail response
+                            nodeDetailsResponses.forEach(function (response) {
+                                var node = response[0].elements[0]; // Assuming single element per response
+                                if (node) {
+                                    latLngs.push([node.lon, node.lat]);
+                                }
+                            });
+                            // Create and add polygon to map
+                            if (latLngs.length > 0) {
+                                console.log("block polygon: ", latLngs)
+                                // let polygon = L.polygon(latLngs).addTo(map);
+                                 polygon = {
+                                    'type': 'Feature',
+                                    'geometry': {
+                                        'type': 'Polygon',
+                                        'coordinates': [latLngs]
+                                    }
+                                };
+                                let isInside = turf.booleanPointInPolygon([lon,lat], polygon.geometry);
+                                if(isInside == true){
+                                    map.addLayer({
+                                        'id': 'polygon',
+                                        'type': 'fill',
+                                        'source': {
+                                            'type': 'geojson',
+                                            'data': polygon
+                                        },
+                                        'layout': {},
+                                        'paint': {
+                                            'fill-color': '#088',
+                                            'fill-opacity': 0.5
+                                        }
+                                    });
+
+                                    // Example of adding a marker at the center of the polygon
+                                    let polygonCenter = turf.centerOfMass(polygon).geometry.coordinates;
+
+                                    console.log("center::", polygonCenter)
+                                    marker = new mapboxgl.Marker()
+                                        .setLngLat(polygonCenter)
+                                        .addTo(map)
+                                        .setPopup(new mapboxgl.Popup().setHTML('Center of Polygon'));
+
+                                    // Zoom to the extent of the polygon
+                                    var bounds = latLngs.reduce(function (bounds, coord) {
+                                        return bounds.extend(coord);
+                                    },
+
+                                        new mapboxgl.LngLatBounds(latLngs[0], latLngs[0]));
+                                    map.fitBounds(bounds, { padding: 20 });
+                                    centerPoint = { lng: polygonCenter[0], lat: polygonCenter[1] };
+                                    polygonPoints = latLngs;
+
+                                    return;
+                                }
+                               
+                                    //return nearestPolygon;
+
+                                }
+                                // polygons.push(polygon);
+
+
+                            
+                            // elementcount++;
+
+                            // if (elementcount === response.elements.length) {
+                            //     findNearestPolygon(lat, lon)
+                            // }
+                        }).fail(function () {
+
+                            // elementcount++;
+                            // if (elementcount === response.elements.length) {
+                            //     findNearestPolygon(lat, lon)
+                            // }
+                            // console.error('Error fetching node details.');
+                            // alert('Failed to fetch node details.');
+                        });
+                    }
+
+
+                });
+
+
+            },
+            error: function (xhr, status, error) {
+                console.error('Error fetching data:', error);
+                alert('Failed to fetch block boundary.');
+            }
+        });
+    }
+    document.getElementById('confirmBtn').addEventListener('click', confirmPolygon);
+    document.getElementById('saveBtn').addEventListener('click', saveData);
+    document.getElementById('resetBtn').addEventListener('click', resetMap);
+    function confirmPolygon() {
+        if (!map.getLayer('polygon') || !centerPoint) {
+            alert('Please select a polygon.');
+            return;
+        }
+
+        getMapboxAddress();
+        document.getElementById('saveBtn').style.display = 'block';
+        document.getElementById('resetBtn').style.display = 'block';
+        document.getElementById('form').style.display = 'block';
+
+        // Disable map click event
+        mapCLickEvent = false;
+    }
     document.getElementById('searchForm').addEventListener('submit', function (e) {
         e.preventDefault(); // Prevent form submission
         var placeId = document.getElementById('placeCode').value;
@@ -165,6 +409,93 @@
         // Update map center
        
     });
+     function getMapboxAddress() {
+        $.ajax({
+            url: `https://api.mapbox.com/geocoding/v5/mapbox.places/${centerPoint.lng},${centerPoint.lat}.json?access_token=${mapboxgl.accessToken}`,
+            type: 'GET',
+            success: function (data) {
+                if (data && data.features && data.features.length > 0) {
+                    var place = data.features[0];
+                    var details = {
+                        placeName: place.place_name,
+                        text: place.text,
+                        address: place.address || '',
+                        context: {}
+                    };
+
+
+                  
+                    document.getElementById('formattedAddress').value = details.placeName;
+
+                }
+            },
+            error: function (xhr, status, error) {
+                console.error('Error: ' + error);
+            }
+        });
+    }
+    function saveData() {
+        const userInput = document.getElementById('userInput').value;
+        if (userInput == null || userInput == '') {
+            alert("please enter an address");
+            return;
+        }
+    
+        const formattedAddress = document.getElementById('formattedAddress').value;
+        let points = polygonPoints.map(function (coord) {
+            return { Lat: coord[1], Lng: coord[0] };
+        });
+        const polygondata = {
+            Center: { Lat: centerPoint.lat, Lng: centerPoint.lng },
+            Points: points,
+            UserInput: userInput,
+            FormattedAddress: formattedAddress
+        };
+        $.ajax({
+            url: '@Url.Action("SavePolygon", "GoogleMap")',
+            type: 'POST',
+            // contentType: 'application/json',
+            data: polygondata,
+            success: function (response) {
+                resetMap();
+            },
+            error: function (xhr, status, error) {
+                // Handle error response
+                console.error('Error: ' + error);
+            }
+        });
+        // fetch('https://localhost:5001/api/polygons', {
+        //     method: 'POST',
+        //     headers: {
+        //         'Content-Type': 'application/json'
+        //     },
+        //     body: JSON.stringify(data)
+        // })
+        //     .then(response => response.json())
+        //     .then(data => {
+        //         console.log('Success:', data);
+        //         resetMap();
+        //     })
+        //     .catch((error) => {
+        //         console.error('Error:', error);
+        //     });
+    }
+    function resetMap() {
+        if (map.getLayer('polygon')) {
+            map.removeLayer('polygon');
+            map.removeSource('polygon');
+        }
+        if (marker) {
+            marker.remove();
+        }
+
+        document.getElementById('saveBtn').style.display = 'none';
+        document.getElementById('resetBtn').style.display = 'none';
+        document.getElementById('form').style.display = 'none';
+
+        // Re-enable map click event
+        mapCLickEvent = true;
+    }
     function getLocationDetails(coordinates) {
         $.ajax({
             url: `https://api.mapbox.com/geocoding/v5/mapbox.places/${coordinates.lng},${coordinates.lat}.json?access_token=${mapboxgl.accessToken}`,
